# o-rly-mcp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  test_claude_desktop_config.py  test_image_conversion.py
orly_generator/: models.py
orly_mcp/: server.py
slack/: __init__.py  models.py  views.py
